  * add direction when no interfaces specified in get_app_tuple()
    (LP: #1838764)
  * various testsuite adjustments for iptables 1.8
  * doc/ufw.8:
    - ::/0 is also a synonym for 'Anywhere'
    - document --force with 'ufw delete NUM'
  * prefer python3
  * empty out IPT_MODULES and update documentation (LP: #1556419)
  * adjust check-requirements to look for other firewall software

 -- Jamie Strandboge <jamie@ubuntu.com>  Wed, 22 Apr 2020 10:25:25 -0500

ufw (0.36) RELEASED; urgency=medium

  * doc/ufw-framework.8:
    - fix path for user[6].rules
    - reference nf_conntrack_sane
    - fix syntax error in example rule (LP: #1782384)
  * snap packaging:
    - adjust snappy packaging for series 16 and to use snapcraft
    - add bash completer to snap packaging
    - add ipset and conntrack
  * doc/ufw-on-snappy.8: update for series 16
  * src/backend_iptables.py: properly calculate the path to state_dir when
    specifying --rootdir and --datadir (ie, fix regression in 0.35 final)
  * conf/before6.rules:
    - adjust ufw6-before-output rules for echo-reply and echo-request
      (LP: #1633698)
    - move echo-reply for ufw6-before-input before INVALID (LP: #1664133,
      LP: #1509725)
  * conf/ufw.defaults: mention nf_conntrack_sane
  * adjust runtime tests to use daytime/port 13 instead of ssh/port 22
    everywhere and adjust to use daytime/port 13 instead of http/port 80 and
    https/port 443 in good/logging and ipv6/bad_args6 (Closes: 849628)
  * don't disable syncookies and instead use the system's value by default
  * Bittorrent can also use UDP (LP: #1695718)
  * doc/ufw.8: remove spurious apostrophes from man page. Thanks to Tom
    Spurling
  * common.py:
    - adjust regex to be more liberal with non-meta characters in interface
      names (LP: #1719211)
    - don't allow interfaces longer than 15 characters
  * shell-completion/bash: use _have() instead of have(). Thanks to Andrew
    Nowak and Paulo Marcel Coelho Aragao (LP: #1775043)